--- a/MvpExamples/ExampleFive/app/src/main/res/values/strings.xml
+++ b/MvpExamples/ExampleFive/app/src/main/res/values/strings.xml
@@ -1,3 +1,7 @@
 <resources>
     <string name="app_name">ExampleFive</string>
+    <string name="btn_text_login">Login</string>
+    <string name="txt_hint_pass">Enter your password</string>
+    <string name="txt_hint_email">Enter your email</string>
+    <string name="txt_text_registration"><u>Registration</u></string>
 </resources>
