--- a/MvpExamples/ExampleFive/app/src/main/res/values/strings.xml
+++ b/MvpExamples/ExampleFive/app/src/main/res/values/strings.xml
@@ -4,4 +4,6 @@
     <string name="txt_hint_pass">Enter your password</string>
     <string name="txt_hint_email">Enter your email</string>
     <string name="txt_text_registration"><u>Registration</u></string>
+
+    <string name="please_wait">Please, wait ...</string>
 </resources>
